--- a/Environments/.env.template
+++ b/Environments/.env.template
@@ -1,3 +1,5 @@
 client_id=<clientid>
 client_secret=<clientsecret>
 redirect_uri=<redirecturi>
+usn=<twitch account user name>
+upn=<twitch account access code>
