--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "better-npm-run": "^0.1.1",
     "dotenv": "^16.3.1",
-    "tmi.js": "^1.8.5",
-    "xhr2": "^0.2.1"
+    "tmi.js": "^1.8.5"
   }
 }
