--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "better-npm-run": "^0.1.1",
     "dotenv": "^16.3.1",
     "tmi.js": "^1.8.5"
+  },
+  "devDependencies": {
+    "@types/tmi.js": "^1.8.5"
   }
 }
