--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
-    "@types/tmi.js": "^1.8.5"
+    "@types/dotenv": "^8.2.0",
+    "@types/tmi.js": "^1.8.6"
   }
 }
