--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Twitch bot to fuck over garou",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node ./build/local/bot.js"
   },
   "author": "quiffy",
   "license": "MIT",
@@ -15,6 +17,8 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/tmi.js": "^1.8.6"
+    "@types/node": "^20.9.0",
+    "@types/tmi.js": "^1.8.6",
+    "typescript": "^5.2.2"
   }
 }
