--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "lib": ["ES2015", "DOM"],
-        "moduleResolution": ""
+        "moduleResolution": "Node"
     }, 
     "include": [
         "./Code/**/*",
