--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node ./build/local/bot.js"
+    "build": "tsc -b",
+    "start": "node ./build/local/index.js"
   },
   "author": "quiffy",
   "license": "MIT",
