--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,9 @@
         "moduleResolution": "Node"
     }, 
     "include": [
-        "./Code/**/*",
-        "./bot.ts"
+        "./src/**/*",
     ],
     "exclude": [
         "node_modules"
-    ],
-    "files": [
-        "./Code/Store/Responses.json"
     ]
 }
